<resources>
    <string name="app_name">Order Food</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nhap_mon_an">Nhập món ăn cần tìm</string>
    <string name="text_mon_an_quanh_day">Món ăn quanh đây</string>
    <string name="text_xem_tat_ca">xem tất cả</string>
    <string name="text_com_phan">Cơm phần</string>
    <string name="text_han">Món hàn</string>
    <string name="text_mon_an_thinh_hanh">Món ăn thịnh hành</string>
    <string name="text_pizza">Pizza</string>
    <string name="text_ga_ran">Gà rán</string>
    <string name="text_mi_pho">Mì phở</string>
    <string name="text_tra_sua">Trà sữa</string>
    <string name="text_banh_mi">Bánh mì</string>
    <string name="text_do_nuong">Đồ nướng</string>
    <string name="text_so_gio">Số giờ</string>
    <string name="text_trang_chu">Trang chủ</string>
    <string name="text_gio_hang">Giỏ hàng</string>
    <string name="text_yeu_thich">Yêu thích</string>
    <string name="text_ca_nhan">Cá nhân</string>
    <string name="text_cap_nhat_thong_tin">Cập nhật thông tin</string>
    <string name="text_ho_ten">Họ tên</string>
    <string name="text_dia_chi">Địa chỉ</string>
    <string name="text_cap_nhat">Cập nhật</string>
    <string name="text_nhap_email_dang_nhap">Nhập email</string>
    <string name="text_mat_khau_ky_tu">Mật khẩu mới phải có ít chất 8 ký tự</string>
    <string name="text_mat_khau_cu">Mật khẩu cũ</string>
    <string name="text_mat_khau_moi">Mật khẩu mới</string>
    <string name="text_nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="text_dong_y">Đồng ý</string>
    <string name="text_doi_mat_khau">Đổi mật khẩu</string>
    <string name="text_quen_mat_khau">Quên mật khẩu</string>
    <string name="text_nhap_email">Vui lòng nhập email của bạn để lấy lại mật khẩu</string>
    <string name="text_lay_lai_mat_khau">Lấy lại mật khẩu</string>
    <string name="text_ten_dang_nhap">Email</string>
    <string name="text_quay_lai_dang_nhap">Quay lại đăng nhập</string>
    <string name="text_mat_khau">Mật khẩu</string>
    <string name="text_luu_mat_khau">Lưu mật khẩu</string>
    <string name="text_dang_nhap">Đăng nhập</string>
    <string name="text_dang_ky">Đăng ký</string>
    <string name="text_quen_mat_khau_click">Quên mật khẩu? Click vào đây</string>
    <string name="text_dang_nhap_fb">Đăng nhập với Facebook</string>
    <string name="text_dang_nhap_gg">Đăng nhập với Google</string>
    <string name="text_hoac">Hoặc</string>
    <string name="text_email">Email</string>
    <string name="text_nhap_mat_khau">Nhập mật khẩu</string>
    <string name="text_dang_ky_tai_khoan">Đăng ký tài khoản</string>
    <string name="text_da_co_tai_khoan">Đã có tài khoản? Đăng nhập</string>
    <string name="text_ten_mon_an">Tên món ăn</string>
    <string name="text_gia_tien">50.000đ</string>
    <string name="text_mo_ta">Mô tả ( nạm bò )</string>
    <string name="text_loi_nhan">Lời nhắn cho cửa hàng</string>
    <string name="text_lua_chon_co">Lựa chọn cỡ</string>
    <string name="text_to_nho">Tô nhỏ</string>
    <string name="text_to_thuong">Tô thường</string>
    <string name="text_to_lon">Tô lớn</string>
    <string name="text_thoi_gian">10:20</string>
    <string name="text_thit_bo">Thịt bò</string>
    <string name="text_star">Star</string>
    <string name="text_dang_xuat">Đăng xuất</string>
    <string name="text_gioi_thieu">Giới Thiệu</string>
    <string name="text_so_dien_thoai">Số điện thoại</string>
    <string name="text_cai_dat">Cài đặt</string>
    <string name="text_thong_tin_user">Thông tin tài khoản</string>
    <string name="text_danh_sach">Danh sách</string>
    <string name="text_ten_nguoi_dung">Tên người dùng</string>
    <string name="text_dat_hang">Đặt hàng</string>
    <string name="text_thuc_an_nhanh">Thức ăn nhanh</string>
    <string name="text_tat_ca_mon_an">Tất cả món ăn</string>
    <string name="text_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="text_doi">Đổi</string>
    <string name="text_ten">Tên</string>
    <string name="text_admin">Nguyễn Thanh Lâm</string>
    <string name="text_dia_chii">357/123 Bình lợi P13 Q Bình Thạnh</string>
    <string name="text_sodienthoai">0941680872</string>
    <string name="text_lien_ket_tai_khoan">Liên kết tài khoản</string>
    <string name="text_gui_thong_bao">Gửi thông báo</string>
    <string name="text_dia_chi_da_luu">Địa chỉ đã lưu</string>
    <string name="text_thoi_gian_nhan_hang">Thời gian nhận hàng</string>
    <string name="text_thoi_gian_20">Trong vòng 20 phút</string>
    <string name="text_ghi_chu">Ghi chú</string>
    <string name="text_chi_tiet_don_hang">Chi tiết đơn hàng</string>
    <string name="text_tam_tinh">Tạm tính</string>
    <string name="text_phi_giao_hang">Phí giao hàng</string>
    <string name="text_100">0đ</string>
    <string name="text_mien_phi">Miễn phí</string>
    <string name="text_1">1</string>
    <string name="text_399">399.000 VNĐ</string>
    <string name="text_1x">1x</string>
    <string name="text_mo_ta_mon_an">Mô tả món ăn</string>
    <string name="text_rating">5.0</string>
    <string name="text_100_000">0đ</string>
    <string name="text_tongcong">Tổng cộng</string>
    <string name="text_thong_tin_don_hang">Thông tin đơn hàng</string>
    <string name="text_mo_ta_mon_an_dialog">Thỉnh thoảng trong ứng dụng của bạn, nếu bạn muốn hỏi người dùng về quyết định giữa có hoặc không để phản hồi bất kỳ hành động cụ thể nào do người dùng thực hiện.</string>
    <string name="text_dia_chi_gio_hang">80 Bình Lợi, P13, Bình Thạnh, TP.HCM</string>
    <string name="text_thay_doi">Thay đổi</string>
    <string name="text_ten_khach_hang">Tên khách hàng</string>
    <string name="text_thanh_vien_moi">Thành viên mới</string>
    <string name="text_don_mua_cua_toi">Lịch sử đơn hàng</string>
    <string name="text_da_giao">Đã giao</string>
    <string name="text_dat_lai">Đặt lại</string>
    <string name="text_thanh_toan_bang">Thanh toán bằng</string>
    <string name="text_phieu_mua_hang">Phiếu mua hàng</string>
    <string name="text_39_000">-39.000đ</string>
    <string name="text_tien_mat">Tiền mặt</string>
    <string name="text_ma_uu_dai">Mã ưu đãi</string>
    <string name="text_0d">0đ</string>
    <string name="text_gio_hang_trong">Giỏ hàng trống</string>
    <string name="text_member">Member</string>
    <string name="text_tuan">Nguyễn Minh Tuấn</string>
    <string name="text_lam">Nguyễn Thanh Lâm</string>
    <string name="text_minh">Nguyễn Cao Minh</string>
    <string name="text_quang">Hồ Xuân Quang</string>
    <string name="text_huy">Hủy</string>
    <string name="text_thay_doi_thong_tin">Thay đổi thông tin</string>
    <string name="text_ten_don_hang">Tên đơn hàng</string>
    <string name="text_tai_khoan">Tài khoản</string>
    <string name="text_order_food_app">Order Food App</string>
    <string name="text_menu">Menu</string>
    <string name="text_phuong_thuc_thanh_toan">Phương Thức Thanh Toán</string>
    <string name="text_hinh_thuc">Hình thức</string>
    <string name="text_thanh_toan_khi_nhan_hang">Thanh toán khi nhận hàng</string>
    <string name="text_phuong_thuc">Phương thức</string>
    <string name="text_tim_mon_an">Tìm món ăn</string>
    <string name="text_giao_hang_den">Giao hàng đến:</string>
    <string name="text_mon_an_dang_hot">Món ăn đang hot!</string>
    <string name="hint_search">Vui lòng nhập món ăn cần tìm</string>

</resources>