<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_hoten"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_ho_ten"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_so_dien_thoai"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_dia_chi"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_email"
            android:textAlignment="center" />



        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_nhap_mat_khau"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ed_repassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:hint="@string/text_nhap_lai_mat_khau"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/boxbutton"
            android:text="@string/text_dang_ky_tai_khoan"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/tv_quaylaidn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoregular"
            android:text="@string/text_da_co_tai_khoan"
            android:textAlignment="center"
            android:textColor="#2537D8"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
