<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorAccent"
            app:backgroundTint="@color/white"
            app:navigationIcon="@drawable/ic_back_white"
            app:title="Chi tiết món ăn" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/imgAnhTTMAH"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_food" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <TextView
                android:id="@+id/tvTenMonAnH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/text_ten_mon_an"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvGiaCT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:hint="@string/text_gia_tien"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/red_light"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/tv_moTaMonAn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mo_ta"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_loi_nhan"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:text="@string/text_lua_chon_co"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_nho" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_thuong" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_lon" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>