<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/title_taikhoan"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorAccent"
            app:backgroundTint="@color/white"
            app:navigationIcon="@drawable/ic_back_white"
            app:title="Tài khoản" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UnusedAttribute">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Circle_Image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/mipho"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_setting_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/text_ten_khach_hang"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/text_setting_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/text_thanh_vien_moi"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="16sp"

                />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cbr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_thong_tin_ca_nhan"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_doithongtin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/text_cap_nhat"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ten"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_ten_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_admin"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dia_chi"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_diachi_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dia_chii"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_so_dien_thoai"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sodienthoai_chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sodienthoai"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/text_doi_mat_khau"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_doimatkhau"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/text_doi"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>