<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginHorizontal="44dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo2"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/text_quen_mat_khau"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/robotolight"
            android:text="@string/text_nhap_email"
            android:textAlignment="center"
            android:textColor="@color/red_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_getUser"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/box"
            android:elevation="@android:dimen/thumbnail_width"
            android:gravity="center"
            android:hint="Email" />

        <Button
            android:id="@+id/btn_getpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_cong"
            android:text="@string/text_lay_lai_mat_khau"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_quaylaidn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/text_quay_lai_dang_nhap"
            android:textAlignment="center"
            android:textColor="#2537D8"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>